--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,9 @@
 .container {
   margin-top: 20px;
   background-color: white;
-  width: 100%;
+  width: 600px;
+  align-items: 'center';
+  justify-content: 'center';
 }
 
 
